# Hadir

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Maugood_v1.0_BRD.docx  PROJECT_CONTEXT.md  docker-compose-https-local.yaml  docker-compose.le.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pilot-plan.md  v1.0-phase-plan.md
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_employees.py  0003_cameras.py  0004_capture.py  0005_photo_embeddings.py  0006_attendance.py  0007_tenants_schema_name.py  0008_tenants_to_public.py  0009_super_admin.py  0010_tenant_branding.py  0011_oidc_config.py  0012_manager_assignments.py  0013_policy_assignments.py  0014_leaves_holidays_settings.py  0015_custom_fields.py  0016_requests.py  0017_request_reason_categories.py  0018_notifications_queue.py  0019_email_and_schedules.py  0020_erp_export_config.py  0021_notifications.py  0022_users_preferred_language.py  0023_users_theme_density.py  0024_employees_status_deleted.py  0025_audit_log_actor_label.py  0026_tenants_slug.py  0027_cameras_capture_split.py  0028_detection_events_orphan.py  0029_tenant_settings_detection.py  0030_p28_7_employee_lifecycle.py  0031_p28_8_camera_metadata.py  0032_detection_events_metadata.py  0033_cameras_detection_enabled.py  0034_cameras_code_zone.py  0035_org_hierarchy.py  0036_photo_provenance_approval.py  0037_person_clips.py  0038_person_clips_person_count.py  0039_face_crops.py  0040_face_crops_grants.py  (+21 more)
backend/hadir/: __init__.py  config.py  db.py  departments_router.py  logging_config.py  main.py  metrics.py  security.py  users_lookup.py
backend/hadir/_test_endpoints/: __init__.py  router.py
backend/hadir/attendance/: __init__.py  engine.py  repository.py  router.py  scheduler.py
backend/hadir/attendance_calendar/: __init__.py  queries.py  router.py
backend/hadir/audit_log/: __init__.py  router.py
backend/hadir/auth/: __init__.py  audit.py  dependencies.py  oidc.py  ratelimit.py  router.py  sessions.py
backend/hadir/branding/: __init__.py  constants.py  css.py  logo.py  repository.py  router.py  schemas.py
backend/hadir/cameras/: __init__.py  repository.py  router.py  rtsp.py  schemas.py
backend/hadir/capture/: __init__.py  analyzer.py  annotate.py  directory.py  event_bus.py  events.py  manager.py  reader.py  tracker.py
backend/hadir/custom_fields/: __init__.py  repository.py  router.py
backend/hadir/detection/: __init__.py  detectors.py  metadata.py
backend/hadir/detection_events/: __init__.py  router.py
backend/hadir/emailing/: __init__.py  providers.py  render.py  secrets.py
backend/hadir/employees/: __init__.py  delete_requests.py  excel.py  lifecycle_cron.py  pdpl.py  photos.py  repository.py  router.py  schemas.py
backend/hadir/erp_export/: __init__.py  builder.py  paths.py  router.py  runner.py
backend/hadir/i18n/: __init__.py  ar.yaml  en.yaml  locale.py
backend/hadir/identification/: __init__.py  embeddings.py  enrollment.py  matcher.py  router.py
backend/hadir/leave_calendar/: __init__.py  router.py
backend/hadir/live_capture/: __init__.py  router.py
backend/hadir/manager_assignments/: __init__.py  repository.py  router.py  schemas.py
backend/hadir/notifications/: __init__.py  camera_watch.py  producer.py  repository.py  router.py  worker.py
backend/hadir/operations/: __init__.py  router.py
backend/hadir/policies/: __init__.py  router.py  schemas.py
backend/hadir/reporting/: __init__.py  attendance.py  former_employees.py  pdf.py  router.py
backend/hadir/requests/: __init__.py  attachments.py  reason_categories.py  repository.py  router.py  schemas.py  sla.py  state_machine.py
backend/hadir/retention/: __init__.py  scheduler.py  sweep.py
backend/hadir/scheduled_reports/: __init__.py  router.py  runner.py  schemas.py  signed_url.py
backend/hadir/super_admin/: __init__.py  audit.py  dependencies.py  repository.py  router.py  sessions.py  system.py
backend/hadir/system/: __init__.py  router.py
backend/hadir/tenants/: __init__.py  middleware.py  scope.py
backend/maugood/: __init__.py  config.py  db.py  departments_router.py  divisions_router.py  logging_config.py  main.py  metrics.py  sections_router.py  security.py  users_lookup.py
backend/maugood/_test_endpoints/: __init__.py  router.py
backend/maugood/attendance/: __init__.py  engine.py  repository.py  router.py  scheduler.py
backend/scripts/: __init__.py  _seed_helpers.py  backup.sh  bootstrap_dev.py  cleanup_orphan_detection_events.py  cleanup_test_pollution.py  compare_uc2.py  deprovision_tenant.py  migrate.py  p10_smoke.py  p12_smoke.py  p9_smoke.py  pre_omran_reset_seed.py  provision_tenant.py  restore.sh  run_lifecycle_cron.py  seed_admin.py  seed_super_admin.py  seed_test_accounts.py  v1_p12_smoke.py  v1_p13_smoke.py  v1_p14_smoke.py  v1_p15_smoke.py  v1_p16_smoke.py  v1_p17_smoke.py  v1_p18_smoke.py  v1_p19_smoke.py  v1_p20_smoke.py  v1_p21_smoke.py  v1_p22_smoke.py
backend/tests/: __init__.py  conftest.py  test_admin_override_p16.py  test_attendance_calendar.py  test_attendance_engine.py  test_attendance_engine_flex.py  test_attendance_engine_p11.py  test_attendance_engine_ramadan_custom.py  test_auth.py  test_branding.py  test_cameras.py  test_capture.py  test_clip_pipeline.py  test_custom_fields.py  test_departments.py  test_employees.py  test_employees_lifecycle.py  test_identification.py  test_leave_calendar_api.py  test_live_capture.py  test_manager_assignments.py  test_migration_lint.py  test_multi_tenant_isolation.py  test_oidc.py  test_operations_workers.py  test_org_hierarchy.py  test_p11_endpoints.py  test_p13_reports.py  test_p17_pdf_reports.py  test_p18_scheduled_reports.py  test_p19_erp_export.py  test_p20_notifications.py  test_p21_i18n.py  test_p21_i18n_lint.py  test_p22_theme_density.py  test_p23_https.py  test_p25_retention_pdpl.py  test_p28_5c_detection_settings.py  test_p28_5d_clip_detection_source.py  test_p28_5e_clip_chunking.py  (+17 more)
frontend/: CLAUDE.md  (+8 more)
(+497 files in other folders)
