[project]
name = "hadir"
version = "0.1.0"
description = "Hadir — camera-based employee attendance platform (backend)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "psycopg[binary]==3.2.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "argon2-cffi==23.1.0",
    "python-dotenv==1.0.1",
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "email-validator==2.2.0",
    "openpyxl==3.1.5",
    "python-multipart==0.0.12",
    "cryptography==43.0.1",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
    "insightface==0.7.3",
    "onnxruntime==1.19.2",
    # P6: Entra ID OIDC. authlib gives us JOSE/JWT validation against
    # the discovery endpoint's JWKS; httpx is needed at runtime (was
    # dev-only) for the discovery + token-exchange HTTP calls.
    "authlib==1.3.2",
    "httpx==0.27.2",
    # P17: HTML→PDF renderer + Jinja templating for the
    # attendance PDF. WeasyPrint pulls in pydyf/cssselect2/tinycss2;
    # libpango / libcairo / libgdk-pixbuf land in the Dockerfile
    # (system deps, not pip-installable).
    "weasyprint==62.3",
    # pydyf 0.11+ broke the ``super().transform()`` call WeasyPrint 62
    # uses (upstream issue #2129). Pin to the last 0.10.x release that
    # WeasyPrint 62.3 was tested against.
    "pydyf==0.10.0",
    "jinja2==3.1.4",
    # P18: cron-expression parsing for scheduled reports.
    "croniter==2.0.5",
    # P21: i18n. PyYAML is the smallest config format that
    # supports nested keys + Unicode without a build step;
    # operators editing translations don't need to escape quotes.
    "PyYAML==6.0.2",
    # P26: Prometheus metrics. ``prometheus-client`` is the
    # canonical Python client; ``prometheus-fastapi-instrumentator``
    # wraps the request-duration / status-code histograms we'd
    # otherwise have to write by hand. Both pinned because the
    # /metrics output format is what Grafana panels match
    # against — accidental upgrades during a CI run would shift
    # the label set.
    "prometheus-client==0.21.0",
    "prometheus-fastapi-instrumentator==7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.8",
    "black==24.8.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hadir*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
