[project]
name = "maugood"
version = "1.1.6"
description = "Maugood — camera-based employee attendance platform (backend)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # P27: bumped to ship the post-0.115 starlette (CVE-2024-47874,
    # CVE-2025-54121). FastAPI 0.124.x is the first 0.115-era line
    # that pins starlette ≥ 0.47.
    "fastapi==0.124.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "psycopg[binary]==3.2.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "argon2-cffi==23.1.0",
    # P27: 1.0.1 → 1.2.2 (CVE-2026-28684).
    "python-dotenv==1.2.2",
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "email-validator==2.2.0",
    "openpyxl==3.1.5",
    # P27: 0.0.12 → 0.0.26 (CVE-2024-53981, CVE-2026-24486,
    # CVE-2026-40347 — all DoS-class on the multipart parser).
    "python-multipart==0.0.26",
    # P27: 43.0.1 → 46.0.7 (CVE-2024-12797, CVE-2026-26007,
    # CVE-2026-34073, CVE-2026-39892). Fernet API surface is
    # stable across this range — encrypted blobs round-trip
    # without rekey.
    "cryptography==46.0.7",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
    "insightface==0.7.3",
    "onnxruntime==1.19.2",
    # P6: Entra ID OIDC. authlib gives us JOSE/JWT validation against
    # the discovery endpoint's JWKS; httpx is needed at runtime (was
    # dev-only) for the discovery + token-exchange HTTP calls.
    # P27: 1.3.2 → 1.6.11 (7 CVEs, several JWT-validation related).
    "authlib==1.6.11",
    "httpx==0.27.2",
    # P17: HTML→PDF renderer + Jinja templating for the
    # attendance PDF. WeasyPrint pulls in pydyf/cssselect2/tinycss2;
    # libpango / libcairo / libgdk-pixbuf land in the Dockerfile
    # (system deps, not pip-installable).
    # P27: 62.3 → 68.0 (CVE-2025-68616). The pydyf-API breakage
    # from the original 62→0.11 incompatibility is gone in 68 —
    # WeasyPrint 68 ships with native support for the new pydyf.
    "weasyprint==68.0",
    "pydyf==0.12.1",
    # P27: 3.1.4 → 3.1.6 (CVE-2024-56326, CVE-2024-56201,
    # CVE-2025-27516 — sandbox escape variants).
    "jinja2==3.1.6",
    # P18: cron-expression parsing for scheduled reports.
    "croniter==2.0.5",
    # P21: i18n. PyYAML is the smallest config format that
    # supports nested keys + Unicode without a build step;
    # operators editing translations don't need to escape quotes.
    "PyYAML==6.0.2",
    # P26: Prometheus metrics. ``prometheus-client`` is the
    # canonical Python client; ``prometheus-fastapi-instrumentator``
    # wraps the request-duration / status-code histograms we'd
    # otherwise have to write by hand. Both pinned because the
    # /metrics output format is what Grafana panels match
    # against — accidental upgrades during a CI run would shift
    # the label set.
    "prometheus-client==0.21.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    # P28.8: host CPU / memory / disk metrics for the Super-Admin
    # System page. Cross-platform (Linux + macOS dev) and lightweight.
    "psutil==6.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.8",
    "black==24.8.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "httpx==0.27.2",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maugood*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
